Drupal x.x.x, xxxx-xx-xx (to be released)
------------------------

- added support for configurable URLs.
- database backend:
    * added support for database table prefxing.
- performance improvements:
    * optimized SQL queries.
- comment module:
    * changed the comment module to use the standard pager and rewrote the
      comment housekeeping code to be much more efficient.
- usability improvements:
    * added support for "mass node operations" to ease repetitive tasks.

Drupal 4.2.0, 2003-08-01
------------------------

- added support for clean URLs.
- added textarea hook and support for onload attributes: enables integration of WYSIWYG editors.
- rewrote the RSS/RDF parser:
    * it will now use PHP's built-in XML parser to parse news feeds.
- rewrote the administration pages:
    * improved the navigational elements and added breadcrumb navigation.
    * improved the look and feel.
    * added context-sensitive help.
- database backend:
    * fixed numereous SQL queries to make Drupal ANSI compliant.
    * added MSSQL database scheme.
- search module:
    * changed the search module to use implicit AND'ing instead of implicit OR'ing.
- node system improvements:
    * replaced the "post content" permission by more fine-grained permissions.
    * improved content submission:
        + improved teasers: teasers are now optional, teaser length can be configured, teaser and body are edited in a single textarea, users will no longer be bothered with teasers when the post is too short for one.
        + added the ability to preview both the short and the full version of your posts.
    * extended the node API which allows for better integration.
    * added default node settings to control the behaviour for promotion, moderation and other options.
- themes:
    * replaced theme "Goofy" by "Xtemplate", a template driven theme.
- removed the 'register_globals = on' requirement.
- added better installation instructions.

Drupal 4.1.0, 2003-02-01