@@ -9,6 +9,10 @@ Drupal x.x.x, xxxx-xx-xx (to be released)
 - comment module:
     * changed the comment module to use the standard pager and rewrote the
       comment housekeeping code to be much more efficient.
+- user module:
+    * added support for multiple sessions per user.
+- forum module:
+    * improved the forum views and the themability thereof.
 - usability improvements:
     * added support for "mass node operations" to ease repetitive tasks.
 
